# partition-api-v2

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  app.py  chunker.py  crawl.py  csv_parser.py  datalab_parser.py  file_type.py  filename.py  ingest.py  notify_trigger.py  s3.py  schema.py  web_app.py  yt.py
src/youtube/: converter.py  utils.py
